--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+<!-- https://stackoverflow.com/questions/7763327/how-to-calculate-date-difference-in-javascript
+Just get current, Dec 1 1789, quick diff, curl https://raw.githubusercontent.com/greg-dryke/us-govt-availability/trunk/down_days.txt and update
+or screw it, just do it all in an acton and update the index :D -->
 <head>
 </head>
 <body>
