--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@ or screw it, just do it all in an acton and update the index :D -->
 <head>
 </head>
 <body>
-Hello world
-</body>
+<h1 style="color:blue;text-align:center;">Availability of the US government</h1>
+<p style="color:green;">%%AVAILABILITY%%</p>
+<p style="color:green;">Methodology: total days in existence (since Dec 1 1789) and <a href="https://en.wikipedia.org/wiki/Government_shutdowns_in_the_United_States">days shutdown</a></p>
+  </body>
