Create that calcs availability

--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<html>
-<!-- https://stackoverflow.com/questions/7763327/how-to-calculate-date-difference-in-javascript
-Just get current, Dec 1 1789, quick diff, curl https://raw.githubusercontent.com/greg-dryke/us-govt-availability/trunk/down_days.txt and update
-or screw it, just do it all in an acton and update the index :D -->
-<head>
-</head>
-<body>
-<h1 style="color:blue;text-align:center;">Availability of the US government</h1>
-<p style="color:green;">%%AVAILABILITY%%</p>
-<p style="color:green;">Methodology: total days in existence (since Dec 1 1789) and <a href="https://en.wikipedia.org/wiki/Government_shutdowns_in_the_United_States">days shutdown</a></p>
-  </body>
+<html> <!-- https://stackoverflow.com/questions/7763327/how-to-calculate-date-difference-in-javascript Just get current, Dec 1 1789, quick diff, curl https://raw.githubusercontent.com/greg-dryke/us-govt-availability/trunk/down_days.txt and update or screw it, just do it all in an acton and update the index :D --> <head> </head> <body> <h1 style="color:blue;text-align:center;">Availability of the US government</h1> <p style="color:green;">99.8969072%</p> <p style="color:black; font-size:0.5em;">Methodology: total days in existence (since Dec 1 1789) and <a href="https://en.wikipedia.org/wiki/Government_shutdowns_in_the_United_States">days shutdown</a></p> </body>
