--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <!-- https://stackoverflow.com/questions/7763327/how-to-calculate-date-difference-in-javascript
 Just get current, Dec 1 1789, quick diff, curl https://raw.githubusercontent.com/greg-dryke/us-govt-availability/trunk/down_days.txt and update
 or screw it, just do it all in an acton and update the index :D -->
-<head>
-<link rel="stylesheet" href="styles.css" id="theme-link">
-</head>
-<body>
-<h1 style="text-align:center;">Availability of the US government</h1>
-<p class="availability red" style="text-align:center">99.8969084%</p>
-<p class="footer" style="text-align:right;">Methodology: total days since Dec 1, 1789 and <a href="https://en.wikipedia.org/wiki/Government_shutdowns_in_the_United_States">days shutdown</a></p>
-<p class="footer" style="text-align:right;">with the simple calc of <code>(total days - shutdown days) / total days</code></p>
-  </body>
+    <head>
+        <link rel="stylesheet" href="styles.css" id="theme-link">
+    </head>
+    <body>
+        <h1 style="text-align:center;">Availability of the US government</h1>
+        <p class="availability red" style="text-align:center">99.8969084%</p>
+        <footer class="footer" style="text-align:right;">Methodology: total days since Dec 1, 1789 and <a href="https://en.wikipedia.org/wiki/Government_shutdowns_in_the_United_States">days shutdown</a> <br> with the simple calc of <code>(total days - shutdown days) / total days</code></footer>
+    </body>
+</html>
